--- a/Responsive Web Design(NEW)/13 Technical Documentation Page/index.html
+++ b/Responsive Web Design(NEW)/13 Technical Documentation Page/index.html
@@ -6,6 +6,23 @@
   <body>
     <nav id="navbar">
       <header>All sections</header>
+      <ul>
+        <li>
+          <a>Section 1</a>
+        </li>
+        <li>
+          <a>Section 2</a>
+        </li>
+        <li>
+          <a>Section 3</a>
+        </li>
+        <li>
+          <a>Section 4</a>
+        </li>
+        <li>
+          <a>Section 5</a>
+        </li>
+      </ul>
     </nav>
     <main id="main-doc">
       <section class="main-section" id="Section_1">
