--- a/Responsive Web Design(NEW)/13 Technical Documentation Page/index.html
+++ b/Responsive Web Design(NEW)/13 Technical Documentation Page/index.html
@@ -8,19 +8,19 @@
       <header>All sections</header>
       <ul>
         <li>
-          <a>Section 1</a>
+          <a class="nav-link" href="#Section_1">Section 1</a>
         </li>
         <li>
-          <a>Section 2</a>
+          <a class="nav-link" href="#Section_2">Section 2</a>
         </li>
         <li>
-          <a>Section 3</a>
+          <a class="nav-link" href="#Section_3">Section 3</a>
         </li>
         <li>
-          <a>Section 4</a>
+          <a class="nav-link" href="#Section_4">Section 4</a>
         </li>
         <li>
-          <a>Section 5</a>
+          <a class="nav-link" href="#Section_5">Section 5</a>
         </li>
       </ul>
     </nav>
