--- a/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/2 Magazine.html
+++ b/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/2 Magazine.html
@@ -1,2 +1,85 @@
 <!-- Step 16
 Create a fifth p element at the end of your .text element, and give it the following text: -->
+
+<p>The main design challenge is taking what is currently paragraphs of explanation and instructions and packing them into a single test description text. 
+  Each project will involve dozens of tests like this. People will be coding the entire time, 
+  rather than switching back and forth from "reading mode" to "coding mode".</p>
+
+
+<!-- Step 17
+Create one final p element at the end of your .text element and give it the following text: -->
+
+<p>
+  Instead of a series of coding challenges, people will be in their code
+  editor passing one test after another, quickly building up a project.
+  People will get into a real flow state, similar to what they
+  experience when they build the required projects at the end of each
+  certification. They'll get that sense of forward progress right from
+  the beginning. And freeCodeCamp will be a much smoother experience.
+</p>
+
+
+<!-- Step 18
+Below your .text element, create a new section element and give it a class of text text-with-images. 
+Within that, create an article element with a class set to brief-history, and an aside element with the class set to image-wrapper. -->
+
+<section class="text text-with-images">
+  <article class="brief-history"></article>
+  <aside class="image-wrapper"></aside>
+</section>
+
+
+<!-- Step 19
+Within your article element, create an h3 element with the class set to list-title and the text of A Brief History. 
+Below that, create a p element with the text Of the Curriculum. Then create a ul element with the class lists. -->
+
+        <article class="brief-history">
+          <h3 class="list-title">A Brief History</h3>
+          <p>Of the Curriculum</p>
+          <ul class="lists"></ul>
+        </article>
+
+
+<!-- Step 20
+Within your ul element, create six li elements. Add an h4 element with a class set to list-subtitle and a p element to each of your li elements.
+
+Then give the h4 and p elements the following text content, in order, with each h4 using what's on the left side of the colon, 
+and each p using what's on the right: -->
+
+        <article class="brief-history">
+          <h3 class="list-title">A Brief History</h3>
+          <p>Of the Curriculum</p>
+          <ul class="lists">
+            <li>
+              <h4 class="list-subtitle">V1 - 2014</h4>
+                <p>We launched freeCodeCamp with a simple list of 15 resources, including Harvard's CS50 and Stanford's Database Class.</p>              
+            </li>
+            <li>
+              <h4 class="list-subtitle">V2 - 2015</h4>
+              <p>We added interactive algorithm challenges.</p>
+            </li>
+            <li>
+              <h4 class="list-subtitle">V3 - 2015</h4>
+              <p>We added our own HTML+CSS challenges (before we'd been relying on General Assembly's Dash course for these).</p>
+            </li>
+            <li>
+              <h4 class="list-subtitle">V4 - 2016</h4>
+              <p>We expanded the curriculum to 3 certifications, including Front End, Back End, and Data Visualization. 
+                They each had 10 required projects, but only the Front End section had its own challenges. 
+                For the other certs, we were still using external resources like Node School.</p>
+            </li>
+            <li>
+              <h4 class="list-subtitle">V5 - 2017</h4>
+              <p>We added the back end and data visualization challenges.</p>
+            </li>
+            <li>
+              <h4 class="list-subtitle">V6 - 2018</h4>
+              <p>We launched 6 new certifications to replace our old ones. This was the biggest curriculum improvement to date.</p>
+            </li>
+          </ul>
+        </article>
+
+
+<!-- Step 21
+Within your aside element, create two img elements, a blockquote element, and a third img element. Give the blockquote element a class set to image-quote. -->
+
