--- a/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/2 Magazine.html
+++ b/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/2 Magazine.html
@@ -134,8 +134,57 @@ The millions of people who are learning to code through freeCodeCamp will have a
 
           <blockquote class="image-quote">
             <hr></hr>
-            <p class="quote">The millions of people who are learning to code through freeCodeCamp will have an even better resource to help them learn these fundamentals.</p>
+            <p class="quote">The millions of people who are learning to code through freeCodeCamp will have 
+              an even better resource to help them learn these fundamentals.</p>
             <hr></hr>
           </blockquote>
+
+
+<!-- Step 26
+To start your CSS, normalize the CSS rules by targeting all elements with *, including the ::before and ::after pseudo-selectors.  
+Set the padding property and margin property both to 0. -->
+
+*, ::before, ::after {
+  padding: 0;
+  margin: 0;
+}
+
+
+<!-- Step 27
+Create an html selector and give it a font-size property set to 62.5%. This will set the default font size for your web page to 10px (the browser default is 16px).
+This will make it easier for you to work with rem units later, as 2rem would be 20px.
+Also, set the box-sizing property to border-box. -->
+
+html {
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
+
+
+<!-- Step 28
+Create a body selector. Set the font-family property to Baskervville, with a fallback of serif. 
+Set the color property to linen and the background-color property to rgb(20, 30, 40). -->
+
+body {
+  font-family: 'Baskervville', serif;
+  color: linen;
+  background-color: rgb(20, 30, 40);
+}
+
+
+<!-- Step 29
+Create an h1 selector, and set the font-family property to Anton with the fallback of sans-serif. -->
+
+h1 {
+  font-family: 'Anton', sans-serif;
+}
+
+
+<!-- Step 30
+Create an h2, h3, h4, h5, h6 selector. Give it a font-family property set to Raleway with a fallback of sans-serif. -->
+
+h2, h3, h4, h5, h6 {
+  font-family: 'Raleway', sans-serif;
+}
 
 
