--- a/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/3 Magazine.html
+++ b/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/3 Magazine.html
@@ -6,3 +6,21 @@ The grid-column property tells the grid item which grid line to start and end at
 
 Create a .heading rule and set the grid-column property to 2 / 3. This will tell the .heading element to start at grid line 2 and end at grid line 3. -->
 
+.heading {
+  grid-column: 2 / 3;
+}
+
+
+<!-- Step 37
+Create a .text selector and give it a grid-column property set to 2 / 3. -->
+
+.text {
+  grid-column: 2 / 3;
+}
+
+
+<!-- Step 38
+For additional control over the layout of your content, you can have a CSS Grid within a CSS Grid.
+
+Set the display property of your .heading selector to grid. -->
+
