--- a/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/3 Magazine.html
+++ b/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/3 Magazine.html
@@ -24,3 +24,35 @@ For additional control over the layout of your content, you can have a CSS Grid 
 
 Set the display property of your .heading selector to grid. -->
 
+.heading {
+  grid-column: 2 / 3;
+  display: grid;
+}
+
+
+<!-- Step 39
+Now you can style the content of the .heading element with CSS Grid.
+
+The CSS repeat() function is used to repeat a value, rather than writing it out manually, and is helpful for grid layouts. 
+For example, setting the grid-template-columns property to repeat(20, 200px) would create 20 columns each 200px wide.
+
+Give your .heading element a grid-template-columns property set to repeat(2, 1fr) to create two columns of equal width. -->
+
+.heading {
+  grid-column: 2 / 3;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+
+<!-- Step 40
+Give your .heading selector a row-gap property set to 1.5rem. -->
+
+.heading {
+  grid-column: 2 / 3;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 1.5rem;
+}
+
+
