--- a/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/3 Magazine.html
+++ b/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/3 Magazine.html
@@ -110,3 +110,50 @@ Create a .hero-title selector and give it a text-align property set to center, a
 }
 
 
+<!-- Step 46
+The subtitle also needs to be styled. 
+Create a .hero-subtitle selector and give it a font-size property set to 2.4rem, a color property set to orangered, and a text-align property set to center. -->
+
+.hero-subtitle {
+  font-size: 2.4rem;
+  text-align: center;
+  color: orangered;
+}
+
+
+<!-- Step 47
+Create an .author selector and give it a font-size property set to 2rem and a font-family property set to Raleway with a fallback of sans-serif. -->
+
+.author {
+  font-size: 2rem;
+  font-family: "Raleway", sans-serif;
+}
+
+
+<!-- Step 48
+Create a .author-name a:hover selector and give it a background-color property set to #306203.
+
+This will create a hover effect only for the a element within the .author-name, showing the original freeCodeCamp green in the background. -->
+
+.author-name a:hover {
+  background-color: #306203;
+}
+
+
+<!-- Step 49
+Create a .publish-date selector and give it a color property of rgba(255, 255, 255, 0.5). -->
+
+.publish-date {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+
+<!-- Step 50
+Create a .social-icons selector. Give it a display property set to grid, and a font-size property set to 3rem. -->
+
+.social-icons {
+  display: grid;
+  font-size: 3rem;
+}
+
+
