--- a/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/3 Magazine.html
+++ b/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/3 Magazine.html
@@ -157,3 +157,72 @@ Create a .social-icons selector. Give it a display property set to grid, and a f
 }
 
 
+<!-- Step 51
+The default settings for CSS Grid will create additional rows as needed, unlike Flexbox. 
+Give the .social-icons selector a grid-template-columns property set to repeat(5, 1fr) to arrange the icons in a single row. -->
+
+.social-icons {
+  display: grid;
+  font-size: 3rem;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+
+<!-- Step 52
+If you wanted to add more social icons, but keep them on the same row, you would need to update grid-template-columns to create additional columns. 
+As an alternative, you can use the grid-auto-flow property.
+
+This property takes either row or column as the first value, 
+with an optional second value of dense. grid-auto-flow uses an auto-placement algorithm to adjust the grid layout. 
+Setting it to column will tell the algorithm to create new columns for content as needed. 
+The dense value allows the algorithm to backtrack and fill holes in the grid with smaller items, which can result in items appearing out of order.
+
+For your .social-icons selector, set the grid-auto-flow property to column. -->
+
+.social-icons {
+  display: grid;
+  font-size: 3rem;
+  grid-template-columns: repeat(5, 1fr);
+  grid-auto-flow: column;
+}
+
+
+<!-- Step 53
+Now the auto-placement algorithm will kick in when you add a new icon element. 
+However, the algorithm defaults the new column width to be auto, which will not match your current columns.
+
+You can override this with the grid-auto-columns property. Give the .social-icons selector a grid-auto-columns property set to 1fr. -->
+
+.social-icons {
+  display: grid;
+  font-size: 3rem;
+  grid-template-columns: repeat(5, 1fr);
+  grid-auto-flow: column;
+  grid-auto-columns: 1fr;
+}
+
+
+<!-- Step 54
+Much like Flexbox, with CSS Grid you can align the content of grid items with align-items and justify-items. 
+align-items will align child elements along the column axis, and justify-items will align child elements along the row axis.
+
+Give the .social-icons selector an align-items property set to center. -->
+
+.social-icons {
+  display: grid;
+  font-size: 3rem;
+  grid-template-columns: repeat(5, 1fr);
+  grid-auto-flow: column;
+  grid-auto-columns: 1fr;
+  align-items: center;  
+}
+
+
+<!-- Step 55
+Give the .text selector a font-size property set to 1.8rem and a letter-spacing property set to 0.6px. -->
+
+.text {
+  grid-column: 2 / 3;
+  font-size: 1.8rem;
+  letter-spacing: 0.6px;
+}
