--- a/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/4 Magazine.html
+++ b/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/4 Magazine.html
@@ -3,3 +3,55 @@ Your .text element is not a CSS Grid, but you can create columns within an eleme
 
 Give your .text selector a column-width property set to 25rem. -->
 
+.text {
+  grid-column: 2 / 3;
+  font-size: 1.8rem;
+  letter-spacing: 0.6px;
+  column-width: 25rem;
+}
+
+
+<!-- Step 57
+Magazines often use justified text in their printed content to structure their layout and control the flow of their content. 
+While this works in printed form, justified text on websites can be an accessibility concern, for example presenting challenges for folks with dyslexia.
+
+To make your project look like a printed magazine, give the .text selector a text-align property set to justify. -->
+
+.text {
+  grid-column: 2 / 3;
+  font-size: 1.8rem;
+  letter-spacing: 0.6px;
+  column-width: 25rem;
+  text-align: justify;
+}
+
+
+<!-- Step 58
+The ::first-letter pseudo-selector allows you to target the first letter in the text content of an element.
+
+Create a .first-paragraph::first-letter selector and set the font-size property to 6rem. Also give it a color property set to orangered to make it stand out. -->
+
+.first-paragraph::first-letter {
+  font-size: 6rem;
+  color: orangered;
+}
+
+
+<!-- Step 59
+The other text has been shifted out of place.
+Move it into position by giving the .first-paragraph::first-letter selector a float property set to left and a margin-right property set to 1rem. -->
+
+.first-paragraph::first-letter {
+  font-size: 6rem;
+  color: orangered;
+  float: left;
+  margin-right: 1rem;
+}
+
+
+<!-- Step 60
+Create an hr selector, and give it a margin property set to 1.5rem 0. -->
+
+hr {
+  margin: 1.5rem 0;
+}
