--- a/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/4 Magazine.html
+++ b/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/4 Magazine.html
@@ -112,3 +112,48 @@ Create a .text-with-images selector and set the display property to grid. -->
 }
 
 
+<!-- Step 66
+You will need to have a column for text and a column for images. Give the .text-with-images selector a grid-template-columns property set to 1fr 2fr. 
+Also set the column-gap property to 3rem to provide more spacing between the columns. -->
+
+.text-with-images {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  column-gap: 3rem;
+}
+
+
+<!-- Step 67
+Give the .text-with-images selector a margin-bottom property set to 3rem. -->
+
+.text-with-images {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  column-gap: 3rem;
+  margin-bottom: 3rem;
+}
+
+
+<!-- Step 68
+Create a .lists selector and set the list-style-type property to none. This will get rid of the bullet points on the list items. -->
+
+.lists {
+  list-style-type: none;
+}
+
+
+<!-- Step 69
+Give the .lists selector a margin-top property set to 2rem. -->
+
+.lists {
+  list-style-type: none;
+  margin-top: 2rem;
+}
+
+
+<!-- Step 70
+Create a .lists li rule to target the list items within your .lists element. Give it a margin-bottom property set to 1.5rem. -->
+
+.lists li {
+  margin-bottom: 1.5rem;
+}
