--- a/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/4 Magazine.html
+++ b/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/4 Magazine.html
@@ -157,3 +157,65 @@ Create a .lists li rule to target the list items within your .lists element. Giv
 .lists li {
   margin-bottom: 1.5rem;
 }
+
+
+<!-- Step 71
+Create a .list-title, .list-subtitle selector and set the color property to #00beef. -->
+
+.list-title, .list-subtitle {
+  color: #00beef;
+}
+
+
+<!-- Step 72
+Time to style the last section of the magazine - the images.
+
+The images are wrapped with an aside element using the image-wrapper class, so create an .image-wrapper selector. Set the display property to grid. -->
+
+.image-wrapper {
+  display: grid;
+}
+
+
+<!-- Step 73
+The images should be within a two column, three row layout.
+
+Give the .image-wrapper selector a grid-template-columns property set to 2fr 1fr and a grid-template-rows property set to repeat(3, min-content). 
+This will give our grid rows that adjust in height based on the content, but columns that remain a fixed width based on the container. -->
+
+.image-wrapper {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: repeat(3, min-content);
+}
+
+
+<!-- Step 74
+The gap property is a shorthand way to set the value of column-gap and row-gap at the same time. 
+If given one value, it sets the column-gap and row-gap both to that value. 
+If given two values, it sets the row-gap to the first value and the column-gap to the second.
+
+Give the .image-wrapper selector a gap property set to 2rem. -->
+
+.image-wrapper {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: repeat(3, min-content);
+  gap: 2rem;
+}
+
+
+<!-- Step 75
+The place-items property can be used to set the align-items and justify-items values at the same time. The place-items property takes one or two values. 
+If one value is provided, it is used for both the align-items and justify-items properties. 
+If two values are provided, the first value is used for the align-items property and the second value is used for the justify-items property.
+
+Give the .image-wrapper selector a place-items property set to center. -->
+
+.image-wrapper {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: repeat(3, min-content);
+  gap: 2rem;
+  place-items: center;
+}
