--- a/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/5 Magazine.html
+++ b/Responsive Web Design(NEW)/15 CSS Grid by Building a Magazine/5 Magazine.html
@@ -6,3 +6,60 @@ Create an .image-1, .image-3 rule and give it a grid-column property set to 1 / 
 }
 
 
+<!-- Step 77
+Now that the magazine layout is finished, you need to make it responsive.
+
+Start with a @media query for only screen with a max-width of 720px. Inside, create an .image-wrapper selector and give it a grid-template-columns property of 1fr.
+
+This will collapse the three images into one column on smaller screens. -->
+
+@media only screen and (max-width: 720px) {
+  .image-wrapper {
+    grid-template-columns: 1fr;
+  }
+}
+
+
+<!-- Step 78
+Create another @media query for only screen with a max-width of 600px. Within, create a .text-with-images rule and give it a grid-template-columns property of 1fr.
+
+This will collapse your bottom text area into a single column on smaller screens. -->
+
+@media only screen and (max-width: 600px) {
+  .text-with-images {
+    grid-template-columns: 1fr;
+  }
+}
+
+
+<!-- Step 79
+Create a third @media query for only screen with a max-width of 550px. 
+Within, create a .hero-title selector with a font-size set to 6rem, a .hero-subtitle, .author, .quote, .list-title selector with a font-size set to 1.8rem, 
+a .social-icons selector with a font-size set to 2rem, and a .text selector with a font-size set to 1.6rem. -->
+
+@media only screen and (max-width: 550px) {
+  .hero-title {
+    font-size: 6rem;
+  }
+  .hero-subtitle, .author, .quote, .list-title {
+    font-size: 1.8rem;
+  }
+  .social-icons {
+    font-size: 2rem;
+  }
+  .text  {
+    font-size: 1.6rem;
+  }
+}
+
+
+<!-- Step 80
+Create one final @media query for only screen with a max-width of 420px. Within, create a .hero-title selector with a font-size property set to 4.5rem.
+
+Congratulations! Your magazine is now complete. -->
+
+@media only screen and (max-width: 420px) {
+  .hero-title {
+    font-size: 4.5rem;
+  }
+}
