--- a/Responsive Web Design(NEW)/16 Product Landing Page/index.html
+++ b/Responsive Web Design(NEW)/16 Product Landing Page/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <link rel="stylesheet" href="styles.css">    
+  </head>
   <body>
     <div>
       <header id="header">
-        <img id="header-img">
+        <img id="header-img" src="https://img.freepik.com/free-vector/vector-hand-drawn-icon-guitarra-isolated-white-background_134830-1121.jpg" width=100px />
       </header>
     </div>
   </body>
