--- a/Responsive Web Design(NEW)/16 Product Landing Page/index.html
+++ b/Responsive Web Design(NEW)/16 Product Landing Page/index.html
@@ -7,6 +7,9 @@
     <div>
       <header id="header">
         <img id="header-img" src="https://img.freepik.com/free-vector/vector-hand-drawn-icon-guitarra-isolated-white-background_134830-1121.jpg" width=100px />
+        <nav id="nav-bar">
+          <ul></ul>
+        </nav>
       </header>
     </div>
   </body>
