--- a/Responsive Web Design(NEW)/16 Product Landing Page/index.html
+++ b/Responsive Web Design(NEW)/16 Product Landing Page/index.html
@@ -8,7 +8,17 @@
       <header id="header">
         <img id="header-img" src="https://img.freepik.com/free-vector/vector-hand-drawn-icon-guitarra-isolated-white-background_134830-1121.jpg" width=100px />
         <nav id="nav-bar">
-          <ul></ul>
+          <ul>
+            <li>
+              <a class="nav-link" href=""></a>
+            </li>
+            <li>
+              <a class="nav-link" href=""></a>
+            </li>
+            <li>
+              <a class="nav-link" href=""></a>
+            </li>
+          </ul>
         </nav>
       </header>
     </div>
