--- a/Responsive Web Design(NEW)/16 Product Landing Page/index.html
+++ b/Responsive Web Design(NEW)/16 Product Landing Page/index.html
@@ -24,8 +24,9 @@
     </div>
     <div class="container">
       <section></section>
-      <section id="demo">
-        
+      <section id="demo">        
+        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/8bq8AG9wCnA" title="YouTube video player" frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </section>
       <section></section>
     </div>
