--- a/Responsive Web Design(NEW)/16 Product Landing Page/index.html
+++ b/Responsive Web Design(NEW)/16 Product Landing Page/index.html
@@ -28,11 +28,14 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper nisl a feugiat scelerisque. Praesent pretium ultrices ante quis lobortis.</p>
       </section>
       <section id="demo">        
-        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/8bq8AG9wCnA" title="YouTube video player" frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/8bq8AG9wCnA" title="YouTube video player" frameborder="0"
+         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </section>
       <section id="low">
-
+        <form id="form">
+          <h3>Enter your email to get more information</h3>
+          <input name="email" id="email" placeholder="Enter your email" type="email"></input>
+        </form>
       </section>
     </div>
   </body>
