--- a/Responsive Web Design(NEW)/16 Product Landing Page/index.html
+++ b/Responsive Web Design(NEW)/16 Product Landing Page/index.html
@@ -32,10 +32,11 @@
          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </section>
       <section id="low">
-        <form id="form">
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
           <h3>Enter your email to get more information</h3>
           <input name="email" id="email" placeholder="Enter your email" type="email"></input>
-        </form>
+          <input id="submit" type="submit"></input>
+        </form>        
       </section>
     </div>
   </body>
