--- a/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/1 Penguin.html
+++ b/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/1 Penguin.html
@@ -4,13 +4,60 @@ Begin with your basic HTML boilerplate. Include the DOCTYPE declaration, html el
 Also, link your stylesheet to the page. -->
 
 <!DOCTYPE html>
-<html>
+<html>  
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flappy Penguin</title>
-    <link rel="stylesheet" type="text/css" href="./styles.css"/>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
+    <title>Penguin</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body></body>
+  <body>
+  </body>
 </html>
+
+
+<!-- Step 2
+Target the body element to set the background to a linear gradient angled 45 degrees clockwise, starting at rgb(118, 201, 255) and ending at rgb(247, 255, 222). -->
+
+body {
+  background: linear-gradient(
+    45deg, rgb(118, 201, 255), rgb(247, 255, 222)
+  )
+}
+
+
+<!-- Step 3
+Normalise your page's sizing, by removing the body element's margin and padding. -->
+
+body {
+  background: linear-gradient(45deg, rgb(118, 201, 255), rgb(247, 255, 222));
+  margin: 0;
+  padding: 0;
+}
+
+
+<!-- Step 4
+Normalise your page, by setting the width to 100%, and height to 100vh. -->
+
+body {
+  background: linear-gradient(45deg, rgb(118, 201, 255), rgb(247, 255, 222));
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100vh;
+}
+
+
+<!-- Step 5
+Remove both the horizontal and vertical scrollbars, and prevent programmatic scrolling, using only one property. -->
+
+body {
+  background: linear-gradient(45deg, rgb(118, 201, 255), rgb(247, 255, 222));
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: clip;
+}
+
 
