--- a/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/1 Penguin.html
+++ b/Responsive Web Design(NEW)/17 CSS Transforms by Building a Penguin/1 Penguin.html
@@ -61,3 +61,51 @@ body {
 }
 
 
+<!-- Step 6
+Within the body, add a div with a class of ground. -->
+
+  <body>
+    <div class="ground"></div>
+  </body>
+
+
+<!-- Step 7
+Target the .ground element, and set its width to take up the full width of the viewport. Then, set the height to 400px. -->
+
+.ground {
+  width: 100vw;
+  height: 400px;
+}
+
+
+<!-- Step 8
+Give the .ground element a background with a linear gradient angled 90 degrees clockwise, starting at rgb(88, 175, 236) and ending at rgb(182, 255, 255). -->
+
+.ground {
+  width: 100vw;
+  height: 400px;
+  background: linear-gradient(90deg, rgb(88, 175, 236), rgb(182, 255, 255))
+}
+
+
+<!-- Step 9
+As the .ground element will be third in the stacking context of the page layout, set its z-index to 3, and position to absolute. -->
+
+.ground {
+  width: 100vw;
+  height: 400px;
+  background: linear-gradient(90deg, rgb(88, 175, 236), rgb(182, 255, 255));
+  z-index: 3;
+  position: absolute;
+}
+
+
+<!-- Step 10
+Above the .ground element, add a div with a class of penguin. This div will contain Flappy Penguin. -->
+
+  <body>
+    <div class="penguin"></div>
+    <div class="ground"></div>
+  </body>
+
+
